deploy: adb0621f9be0621f569e8f63e51b31896d6a74b3

--- a/lectures/04_requirement_analysis.html
+++ b/lectures/04_requirement_analysis.html
@@ -680,7 +680,48 @@ to solving a task</li>
 <img src="figures/proc3.png" height="500" alt="a code review process" />
 <figcaption aria-hidden="true">a code review process</figcaption>
 </figure>
-<!-- # data flow diagram -->
+<h1 id="data-flow-diagram-dfd"><a class="header" href="#data-flow-diagram-dfd">data flow diagram (DFD)</a></h1>
+<div class="columns">
+<div class="column mt-3" width="60%">
+<ul>
+<li>use comprehensible entity names</li>
+<li>processes should be numbered for easier mapping and referral to
+specific processes</li>
+<li>should be clear, the number of processes (functions) in one DFD is
+recommended to be from 6 to 9 (minimum is 3)</li>
+<li>multi-level DFDs can be created</li>
+</ul>
+</div>
+<div class="column" width="40%">
+<figure>
+<img src="figures/borrowed/wikipedia/Data-flow-diagram-notation.svg"
+alt="DFD components by wooptoo | public domain" />
+<figcaption aria-hidden="true">DFD components<br><span
+class="text-smaller">by <a
+href="https://en.wikipedia.org/wiki/File:Data-flow-diagram-notation.svg">wooptoo</a>
+| public domain</span></figcaption>
+</figure>
+</div>
+</div>
+<h1 id="data-flow-diagram-dfd-1"><a class="header" href="#data-flow-diagram-dfd-1">data flow diagram (DFD)</a></h1>
+<ul>
+<li>use comprehensible entity names</li>
+<li>processes should be numbered for easier mapping and referral to
+specific processes</li>
+<li>should be clear, the number of processes (functions) in one DFD is
+recommended to be from 6 to 9 (minimum is 3)</li>
+<li>multi-level DFDs can be created</li>
+</ul>
+<figure>
+<img src="figures/dfd.drawio.svg"
+data-preview-image="figures/dfd.drawio.svg" data-preview-fit="contain"
+height="200"
+alt="DFD components, there are multiple notations, sometimes extended with flowcharts elements" />
+<figcaption aria-hidden="true">DFD components, there are multiple
+notations, sometimes extended with flowcharts elements</figcaption>
+</figure>
+<h2 id="data-flow-diagram-example"><a class="header" href="#data-flow-diagram-example">data flow diagram example</a></h2>
+<p><img src="figures/dfd_flashcard.drawio.svg" alt="" /></p>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
