--- a/slides/04_requirement_analysis.html
+++ b/slides/04_requirement_analysis.html
@@ -662,7 +662,57 @@ Flowchart</a></li>
 alt="a code review process" />
 <figcaption aria-hidden="true">a code review process</figcaption>
 </figure>
-<!-- # data flow diagram -->
+</section></section>
+<section id="data-flow-diagram-dfd" class="title-slide slide level1"
+data-visibility="hidden">
+<h1 data-visibility="hidden">data flow diagram (DFD)</h1>
+<div class="columns">
+<div class="column mt-3" style="width:60%;">
+<ul>
+<li>use comprehensible entity names</li>
+<li>processes should be numbered for easier mapping and referral to
+specific processes</li>
+<li>should be clear, the number of processes (functions) in one DFD is
+recommended to be from 6 to 9 (minimum is 3)</li>
+<li>multi-level DFDs can be created</li>
+</ul>
+</div><div class="column" style="width:40%;">
+<figure>
+<img
+data-src="figures/borrowed/wikipedia/Data-flow-diagram-notation.svg"
+alt="DFD components by wooptoo | public domain" />
+<figcaption aria-hidden="true">DFD components<br><span
+class="text-smaller">by <a
+href="https://en.wikipedia.org/wiki/File:Data-flow-diagram-notation.svg">wooptoo</a>
+| public domain</span></figcaption>
+</figure>
+</div>
+</div>
+</section>
+
+<section>
+<section id="data-flow-diagram-dfd-1" class="title-slide slide level1">
+<h1>data flow diagram (DFD)</h1>
+<ul>
+<li>use comprehensible entity names</li>
+<li>processes should be numbered for easier mapping and referral to
+specific processes</li>
+<li>should be clear, the number of processes (functions) in one DFD is
+recommended to be from 6 to 9 (minimum is 3)</li>
+<li>multi-level DFDs can be created</li>
+</ul>
+<figure>
+<img data-src="figures/dfd.drawio.svg"
+data-preview-image="figures/dfd.drawio.svg" data-preview-fit="contain"
+height="200"
+alt="DFD components, there are multiple notations, sometimes extended with flowcharts elements" />
+<figcaption aria-hidden="true">DFD components, there are multiple
+notations, sometimes extended with flowcharts elements</figcaption>
+</figure>
+</section>
+<section id="data-flow-diagram-example" class="slide level2">
+<h2>data flow diagram example</h2>
+<p><img data-src="figures/dfd_flashcard.drawio.svg" /></p>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
