deploy: 04ec8e15db6aa921f92e8fb83dbfcd869f58d0e5

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -227,7 +227,7 @@ in teams</strong>
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">colloquial R.A.</td>
+<td style="text-align: center;">informal R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
