--- a/lectures/04_requirement_analysis.html
+++ b/lectures/04_requirement_analysis.html
@@ -722,6 +722,8 @@ notations, sometimes extended with flowcharts elements</figcaption>
 </figure>
 <h2 id="data-flow-diagram-example"><a class="header" href="#data-flow-diagram-example">data flow diagram example</a></h2>
 <p><img src="figures/dfd_flashcard.drawio.svg" alt="" /></p>
+<p>additional reading: <a href="https://www.drawio.com/blog/data-flow-diagrams">how to create DFD in
+draw.io</a></p>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
