--- a/print.html
+++ b/print.html
@@ -635,7 +635,7 @@ in teams</strong>
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">colloquial R.A.</td>
+<td style="text-align: center;">informal R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
@@ -4004,6 +4004,8 @@ notations, sometimes extended with flowcharts elements</figcaption>
 </figure>
 <h2 id="data-flow-diagram-example"><a class="header" href="#data-flow-diagram-example">data flow diagram example</a></h2>
 <p><img src="lectures/figures/dfd_flashcard.drawio.svg" alt="" /></p>
+<p>additional reading: <a href="https://www.drawio.com/blog/data-flow-diagrams">how to create DFD in
+draw.io</a></p>
 <h1 id="references-4"><a class="header" href="#references-4">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
