--- a/slides/04_requirement_analysis.html
+++ b/slides/04_requirement_analysis.html
@@ -713,6 +713,9 @@ notations, sometimes extended with flowcharts elements</figcaption>
 <section id="data-flow-diagram-example" class="slide level2">
 <h2>data flow diagram example</h2>
 <p><img data-src="figures/dfd_flashcard.drawio.svg" /></p>
+<p>additional reading: <a
+href="https://www.drawio.com/blog/data-flow-diagrams">how to create DFD
+in draw.io</a></p>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
