--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -210,7 +210,7 @@ data-visibility="hidden">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">colloquial R.A.</td>
+<td style="text-align: center;">informal R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
@@ -320,7 +320,7 @@ class="title-slide slide level1 exclude-header">
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">2025-09-24</td>
 <td style="text-align: center;">SDLC, scrum, kanban</td>
-<td style="text-align: center;">colloquial R.A.</td>
+<td style="text-align: center;">informal R.A.</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
