--- a/slides/05_user_story_mapping.html
+++ b/slides/05_user_story_mapping.html
@@ -59,19 +59,76 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <ul>
 <li>the backlog difficult to prioritize
 <ul>
-<li>identify dependencies</li>
+<li>because it’s a list</li>
+<li>difficult to identify dependencies
+<ul>
+<li>it quickly becomes a network</li>
+</ul></li>
 <li>already at this point the tasks need detailed understanding</li>
 </ul></li>
 <li>the backlog is one dimensional
 <ul>
-<li>priority</li>
+<li>which is priority</li>
 </ul></li>
 </ul>
 </section>
 
 <section>
+<section id="user-story-mapping" class="title-slide slide level1">
+<h1>user story mapping</h1>
+<ul>
+<li>popularized by Jeff Patton
+<ul>
+<li><a href="https://jpattonassociates.com/the-new-backlog/">original
+blog post</a></li>
+<li>User Story Mapping, O’Reilly, 2014, ISBN-13: 978-1491904909</li>
+</ul></li>
+<li>performed in workshops including
+<ul>
+<li>users,</li>
+<li>(UI) designers,</li>
+<li>developers,</li>
+<li>testers,</li>
+<li>and other stakeholders</li>
+</ul></li>
+<li>build a shared understanding of the product and a common
+language</li>
+</ul>
+</section>
+<section id="other-benefits-of-usm" class="slide level2">
+<h2>other benefits of USM</h2>
+<ul>
+<li>helps to understand and prioritise what the user needs</li>
+<li>it can discussed with the customer / users → feedback</li>
+<li>highlights assumptions and risks that might be missed by a single
+viewpoint</li>
+<li>uncovering dependencies earlier and faster with multiple
+viewpoints</li>
+</ul>
+</section></section>
 <section id="user-story-map" class="title-slide slide level1">
 <h1>user story map</h1>
+<div class="columns">
+<div class="column" style="width:50%;">
+<ul>
+<li>two dimensional</li>
+<li>uses the <em>user’s</em> perspective to tell a story /
+narrative</li>
+<li>the user want to achieve a goal</li>
+<li>which consists of one or many activities</li>
+</ul>
+</div><div class="column text-size-2" style="width:50%;">
+<p><img data-src="figures/user_story_map_sketch.drawio.svg"
+data-preview-image="figures/user_story_map_sketch.drawio.svg"
+data-preview-fit="contain" /></p>
+</div>
+</div>
+</section>
+
+<section>
+<section id="user-story-map-1" class="title-slide slide level1"
+data-visibility="hidden">
+<h1 data-visibility="hidden">user story map</h1>
 <p><img data-src="figures/user_story_map.drawio.svg" /></p>
 <aside class="notes">
 <ul>
@@ -91,7 +148,7 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <div class="column" style="width:50%;">
 <ul>
 <li>is sort of a big thing that people do</li>
-<li>that has lots of steps,</li>
+<li>that can have multiple steps,</li>
 <li>and doesn’t always have a precise workflow</li>
 </ul>
 <p>activities are still user stories with roles</p>
@@ -120,13 +177,13 @@ so I can keep up with their posts.</code></pre>
 activity</li>
 </ul></li>
 </ul>
-</div><div class="column" style="width:45%;">
+</div><div class="column" style="width:50%;">
 <dl>
 <dt>for example (follow a user)</dt>
 <dd>
 <ol type="1">
-<li>search for user</li>
-<li>add user to followed list</li>
+<li>search for a user</li>
+<li>add user to the followed list</li>
 </ol>
 </dd>
 </dl>
@@ -149,28 +206,11 @@ alt="from “Quickstart Guide to User Story Mapping” by Eben Halford | CC BY-S
 <figcaption aria-hidden="true">from “Quickstart Guide to User Story
 Mapping” by Eben Halford | CC BY-SA 2.5</figcaption>
 </figure>
-</section></section>
-<section>
-<section id="user-story-mapping" class="title-slide slide level1">
-<h1>user story mapping</h1>
-<ul>
-<li>popularized by Jeff Patton
-<ul>
-<li><a href="https://jpattonassociates.com/the-new-backlog/">original
-blog post</a></li>
-<li>User Story Mapping, O’Reilly, 2014, ISBN-13: 978-1491904909</li>
-</ul></li>
-<li>performed in workshops including
-<ul>
-<li>users,</li>
-<li>(UI) designers,</li>
-<li>developers,</li>
-<li>testers,</li>
-<li>and stakeholders</li>
-</ul></li>
-<li>build a shared understanding of the product and a common
-language</li>
-</ul>
+<div class="text-smaller">
+<p>reading: <a
+href="../resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart
+Guide to User Story Mapping</a></p>
+</div>
 </section>
 <section id="user-story-map-as-a-document" class="slide level2">
 <h2>user story map as a document</h2>
@@ -191,14 +231,118 @@ acquired about the software
 <section id="backbone-skeleton-ribs" class="title-slide slide level1">
 <h1>backbone, skeleton, ribs</h1>
 <p><img data-src="figures/user_story_map_bones.drawio.svg" /></p>
+<p>top-down structure, high-level overview first, then adding
+details</p>
 </section>
 <section id="iterations" class="slide level2">
 <h2>iterations</h2>
 <p><img data-src="figures/user_story_map_increments.drawio.svg" /></p>
 </section></section>
-<section id="social-media-platform---example"
+<section id="note-that" class="title-slide slide level1">
+<h1>note that</h1>
+<ul>
+<li>there can be several different types of user</li>
+<li>each one could have a different reason for their activities</li>
+</ul>
+</section>
+
+<section>
+<section id="story-mapping-steps" class="title-slide slide level1">
+<h1>story mapping steps</h1>
+<ol type="1">
+<li>set the context, decide on the goal
+<ul>
+<li>who is the user we are mapping for?</li>
+<li>what are they trying to achieve with their activity and why?</li>
+<li>what is the outcome they seek and how will we help them to achieve
+it?</li>
+</ul></li>
+<li>tell a story
+<ul>
+<li>go wide not deep, details come later</li>
+<li>focus on the narrative flow
+<!--     - the sequence of the activities does not need to be perfect immediately --></li>
+</ul></li>
+<li>create the backbone of steps</li>
+<li>define user tasks for each step</li>
+</ol>
+<div class="text-smaller">
+<p>based on the <a
+href="../resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart
+Guide to User Story Mapping</a></p>
+</div>
+</section>
+<section id="story-mapping-steps-1" class="slide level2">
+<h2>story mapping steps</h2>
+<ol type="1">
+<li>set the context, decide on the goal</li>
+<li>tell a story</li>
+<li>create the backbone of steps
+<ul>
+<li>activities as a collection of things you do to get the goal
+done</li>
+<li>things that get your activity done are steps</li>
+<li>start your steps with a verb, an action</li>
+<li>the order of steps may differ by users, think of an ideal
+sequence</li>
+<li>discuss different use cases as they come up</li>
+</ul></li>
+<li>define user tasks for each step
+<ul>
+<li>they can include sub-tasks, alternative tasks, exceptions, details
+and even UX notes</li>
+<li>if a step has many tasks, is may worth to split into separate
+steps</li>
+</ul></li>
+</ol>
+<div class="text-smaller">
+<p>based on the <a
+href="../resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart
+Guide to User Story Mapping</a></p>
+</div>
+</section></section>
+<section id="social-media-platform-example-sign-up"
 class="title-slide slide level1">
-<h1>social media platform - example</h1>
+<h1>social media platform example – sign-up</h1>
+<p><img data-src="figures/usm/usm_sign_up.svg" /></p>
+<p>sign-up feature from a <span
+data-preview-image="figures/social_media_platform/p1_wbs.svg"
+data-preview-fit="contain">minimal social media platform</span></p>
+<!--:::::::::::: {.columns}
+::::::::: {.column width="50%"}
+
+:::::::::
+::::::::: {.column width="50%"}
+
+:::::::::
+::::::::::::-->
+</section>
+
+<section id="social-media-platform-example-user-management"
+class="title-slide slide level1">
+<h1>social media platform example – user management</h1>
+<p><img data-src="figures/usm/user_management.svg"
+data-preview-image="figures/usm/user_management.svg"
+data-preview-fit="contain" /></p>
+<p>user management features from a <span
+data-preview-image="figures/social_media_platform/p1_wbs.svg"
+data-preview-fit="contain">social media platform v2</span></p>
+</section>
+
+<section id="social-media-platform-example-create-content"
+class="title-slide slide level1">
+<h1>social media platform example – create content</h1>
+<p><img data-src="figures/usm/um_create_content.svg"
+data-preview-image="figures/usm/um_create_content.svg"
+data-preview-fit="contain" /></p>
+<p>create content feature from a <span
+data-preview-image="figures/social_media_platform/p2_wbs.svg"
+data-preview-fit="contain">social media platform v2</span></p>
+</section>
+
+<section id="social-media-platform---example"
+class="title-slide slide level1" data-visibility="hidden">
+<h1 data-visibility="hidden">social media platform - example</h1>
 <p><img
 data-src="figures/social_media_platform/usm_sign_up.drawio.svg" /></p>
 </section>
@@ -208,8 +352,12 @@ class="title-slide slide level1">
 <h1>user story mapping mistakes</h1>
 <div class="columns">
 <div class="column" style="width:50%;">
-<p><img data-src="figures/usm_too_many_details.drawio.svg"
-height="450" /></p>
+<figure>
+<img data-src="figures/usm_too_many_details.drawio.svg" height="450"
+alt="getting bogged down in the details" />
+<figcaption aria-hidden="true">getting bogged down in the
+details</figcaption>
+</figure>
 </div><div class="column" style="width:50%;">
 <div class="r-stack">
 <div class="fragment">
