deploy: 9fb06f63c75a3a74b6a57e248b4c35dd26b3413e

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Scrum</a></li>
 <li><a href="slides/summary_week02.html">week 2 summary</a></li>
 <li><a href="slides/04_requirement_analysis.html">requirement analysis</a></li>
 <li><a href="slides/05_user_story_mapping.html">user story mapping</a></li>
-<li><a href="slides/project.html">project assignment</a></li>
+<li><a href="slides/03_user_story_mapping.html">user story mapping example</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
 <p>requirement analysis</p>
