--- a/print.html
+++ b/print.html
@@ -222,7 +222,7 @@ Scrum</a></li>
 <li><a href="lectures/slides/summary_week02.html">week 2 summary</a></li>
 <li><a href="lectures/slides/04_requirement_analysis.html">requirement analysis</a></li>
 <li><a href="lectures/slides/05_user_story_mapping.html">user story mapping</a></li>
-<li><a href="lectures/slides/project.html">project assignment</a></li>
+<li><a href="lectures/slides/03_user_story_mapping.html">user story mapping example</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
 <p>requirement analysis</p>
