deploy: b6266eb9e000c38d343b48f32202dd01a1f788cd

--- a/slides/03_user_story_mapping.html
+++ b/slides/03_user_story_mapping.html
@@ -192,6 +192,7 @@ alt="ETL (Extract Transform Load)" />
 <ul>
 <li>let’s draw a user story map</li>
 <li><a href="https://app.textusm.com/">open textusm</a></li>
+<li><a href="https://excalidraw.com/">open excalidraw</a></li>
 </ul>
 </div><div class="column" style="width:50%;">
 <p><img data-src="../lectures/figures/user_story_map.drawio.svg" /></p>
