deploy: 7f162dcdf798ec5be9232862d648274f6be1bee9

--- a/slides/03_user_story_mapping.html
+++ b/slides/03_user_story_mapping.html
@@ -193,6 +193,8 @@ alt="ETL (Extract Transform Load)" />
 <li>let’s draw a user story map</li>
 <li><a href="https://app.textusm.com/">open textusm</a></li>
 <li><a href="https://excalidraw.com/">open excalidraw</a></li>
+<li><a href="https://www.avion.io/blog/user-story-mapping-template/">USM
+template for Google sheets / Excel</a></li>
 </ul>
 </div><div class="column" style="width:50%;">
 <p><img data-src="../lectures/figures/user_story_map.drawio.svg" /></p>
